Update dependencies and code: - Remove platform-specific JavaFX dependencies for cross-platform compatibility - Update LangChain4j code to use newer API - Various code improvements and fixes